--- a/hw04.md
+++ b/hw04.md
@@ -52,11 +52,19 @@ ASCII至今为止共定义了128个字符；其中33个字符无法显示。
 >- 金色(gold)表示财富
 >- 棕色(brown)表示土地，一种沉稳的气质
 
+1. 
 类型 | A | 中
 --- | :--:| ---:
-ASCII | 0100 0001 | \u4e2d
-Unicode | \u0041 | \u4e2d
-utf-8 | A | D6D0  4E2D  E4 B8 AD  
+ASCII | 0100 0001 | 0xd6 0xd0
+Unicode | 0x0041 | 0x4e2d
+utf-8 | 0x41 | 0xe4 0xb8 0xad  
 
-- 黄色的RGB编码是255 255 0
+2. 黄色的RGB编码是255 255 0
+3. 显示质量：BPM=JPG>tiff>png
+
+格式 | jpg | png | tiff
+--- | :--: | :--: |---: 
+压缩率 | 34.5 | 1.8 | 2.5
+4. winrar是无损压缩，lossless
+
 
